<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/youtube"
            style="@style/AppTheme.BottomSheetListItem"
            android:drawableLeft="@drawable/youtube"
            android:text="@string/youtube" />

        <TextView
            android:id="@+id/lastfm"
            style="@style/AppTheme.BottomSheetListItem"
            android:drawableLeft="@drawable/lastfm"
            android:text="@string/title_lastfm" />

        <TextView
            android:id="@+id/google"
            style="@style/AppTheme.BottomSheetListItem"
            android:drawableLeft="@drawable/google"
            android:text="@string/google" />

        <TextView
            android:id="@+id/musicbrainz"
            style="@style/AppTheme.BottomSheetListItem"
            android:drawableLeft="@drawable/musicbrainz"
            android:text="@string/musicbrainz" />

        <TextView
            android:id="@+id/amazon"
            style="@style/AppTheme.BottomSheetListItem"
            android:drawableLeft="@drawable/amazon"
            android:text="@string/amazon" />

        <TextView
            android:id="@+id/play"
            style="@style/AppTheme.BottomSheetListItem"
            android:drawableLeft="@drawable/play"
            android:text="@string/google_play" />

    </LinearLayout>

</ScrollView>